# deer-flow-fusion

./: .gitignore  CONTRIBUTING.md  OPEN_SOURCE_CHECKLIST.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: SWE_PRO_RETRIEVAL_REPAIR_BRIEF_20260618.md  context-routing.md  deterministic-runtime.md  open-source-release.md  repoqa-rerank-root-cause.md  rust-rerank-optimization.md  stable-router-results.md  swepro-issue-mode-p0-20260618.md  swepro-routing-fix-20260618.md
examples/: quickstart.py
integrations/: README.md
src/codegraph_rag/: __init__.py  api.py  cache.py  call_graph.py  chunker.py  cli.py  community.py  config.py  context.py  data_flow.py  dependency_layer.py  embedding.py  embedding_local.py  graph_search.py  indexer.py  intent_router.py  models.py  reranker.py  reranker_v2.py  search.py  storage.py  symbol_extractor.py
tests/: test_search_routing.py
