[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraph-rag"
version = "0.1.0"
description = "Standalone local code RAG engine with Graph + Vector + BM25/FTS5 RRF fusion"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "CodeGraph RAG Contributors" }
]
keywords = ["rag", "code-search", "codegraph", "bm25", "sqlite-vec", "tree-sitter", "local-embedding"]
dependencies = [
  "networkx>=3.2",
  "pydantic>=2.0",
  "sentence-transformers>=3.0",
  "sqlite-vec>=0.1.6",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-java>=0.23",
]

[project.optional-dependencies]
api = ["httpx>=0.27"]
watch = ["watchdog>=4.0"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
codegraph-rag = "codegraph_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codegraph_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
